--- a/src/app/main/statistic/sms-list-agency/sms-list-agency.component.html
+++ b/src/app/main/statistic/sms-list-agency/sms-list-agency.component.html
@@ -174,7 +174,7 @@
                         <th class="text-center" style="min-width: 250px; vertical-align: middle;">
                           {{'sms_list.content' | translate}}</th>
                         <th class="text-center" style="width: 60px; vertical-align: middle; white-space: nowrap;">
-                          {{'sms_list.count_sms' | translate}}</th>
+                          {{'sms_list.price_sms' | translate}}</th>
                         <th class="text-center" style="width: 170px; vertical-align: middle; white-space: nowrap;">
                           {{'sms_list.sent_time' | translate}}</th>
                         <th class="text-center" style="width: 130px; vertical-align: middle; white-space: nowrap;">
