--- a/src/app/main/sms/resend-sms/resend-sms.component.html
+++ b/src/app/main/sms/resend-sms/resend-sms.component.html
@@ -84,10 +84,12 @@
                                     <label>{{'resend_sms.dateResent' | translate}}</label>
                                     <input type="text" class="form-control has-feedback-left" name="dateTo"
                                         bsDatepicker autocomplete="off" 
+                                        [minDate]="minDate"
                                         [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', selectFromOtherMonth: true}"
                                         placeholder="{{ 'resend_sms.dateResent' | translate }}" [(ngModel)]="dateTo">
                                     <span class="fa fa-clock-o form-control-feedback left" aria-hidden="true"></span>
                                 </div>
+                                 <!-- [minDate]="minDate" -->
                                 <div class="col-md-6 col-sm-6 col-xs-12 form-group">
                                     <label>{{'resend_sms.time_send' | translate}}</label>
                                     <!-- <input type="text" class="form-control has-feedback-left" name="timeSend"
